feat: move mobile menu button to top right corner of header with absolute positioning

--- a/static/index.html
+++ b/static/index.html
@@ -85,20 +85,20 @@
                 </nav>
 
                 <div class="header-actions">
-                    <!-- Мобильная кнопка меню -->
-                    <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Открыть меню">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <line x1="3" y1="6" x2="21" y2="6"></line>
-                            <line x1="3" y1="12" x2="21" y2="12"></line>
-                            <line x1="3" y1="18" x2="21" y2="18"></line>
-                        </svg>
-                    </button>
-
                     <div class="user-info">
                         <div class="user-avatar" id="user-avatar">U</div>
                         <span class="user-name" id="user-name">Пользователь</span>
                     </div>
                 </div>
+
+                <!-- Мобильная кнопка меню в правом углу -->
+                <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Открыть меню">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="3" y1="6" x2="21" y2="6"></line>
+                        <line x1="3" y1="12" x2="21" y2="12"></line>
+                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                    </svg>
+                </button>
             </div>
         </header>
 
