feat: change 'Документ' to 'Загрузить' in tools dropdown menu

--- a/static/index.html
+++ b/static/index.html
@@ -321,7 +321,7 @@
 
                                 <div id="tools-dropdown" class="tools-dropdown">
                                     <button id="document-btn" class="dropdown-item" onclick="handleDocument()" style="display: flex !important; align-items: center !important; gap: 10px !important; width: 100% !important; padding: 12px 16px !important; border: none !important; background: none !important; color: #333 !important; font-size: 14px !important; text-align: left !important; cursor: pointer !important; border-bottom: 1px solid #eee !important;">
-                                        Документ
+                                        Загрузить
                             </button>
 
                                     <button id="connect-btn" class="dropdown-item" onclick="handleConnect()" style="display: flex !important; align-items: center !important; gap: 10px !important; width: 100% !important; padding: 12px 16px !important; border: none !important; background: none !important; color: #333 !important; font-size: 14px !important; text-align: left !important; cursor: pointer !important;">
